components/ra/request-consumables/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: request-consumables
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
